--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <label for="color">What is your favorite color?</label>
         <input id="color" class="form-control" type="color">
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="born">Date of birth:</label>
         <input id="born" class="form-control" type="date">
-      </div>
+      </div> -->
+      <input type="text" id="name" name="name">
       <select class="form-control" id="beverage">
         <option value="coffee">Coffee</option>
         <option value="tea">Tea</option>
@@ -42,6 +43,9 @@
           Cookies & Cream
         </label>
       </div>
+    </div>
+    <div class="container" id="output">
+      <p>Hello, <span id="name"></span> It looks like you enjoy <span id="food"></span> while listening to <span id="genre"></span> in a <span id="hexCode"></span> room. That's so cool. You seem like a really cool person.</p>
     </div>
   </body>
 </html>
